--- a/doc/wikilink.mdwn
+++ b/doc/wikilink.mdwn
@@ -15,10 +15,10 @@ While a WikiLink is limited to alphanumerics and only a few special
 charaters, it is possible to create page names containing other characters:
 
 * To display a page name with a space in it, use "_" in the WikiLink, for
-  example, [[Multi_Word_Page_Name]]. 
+  example, "\[[Multi\_Word\_Page\_Name]]". 
 * For any other special character, you can use "__nnnn__" where `nnnn` is the
   unicode character number. For example,
-  [[This_page_name_is__44___uselessly__44___a_complete_sentence__46__]]
+  "\[[This\_page\_name\_is\_\_44\_\_\_uselessly\_\_44\_\_\_a\_complete\_sentence\_\_46\_\_]]"
   Limiting use of this to when you really need it is a good idea.
 
 Note that if the file linked to by a WikiLink looks like an image, it will
