add support for generating per-page rss feeds

--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -27,6 +27,13 @@ Currently implemented:
   and is quite smart about converting it to html. The only additional markup
   provided by ikiwiki aside from regular markdown is the [[WikiLink]].
 
+* [[RSS]]
+
+  ikiwiki supports generating RSS (2.0) feed for individual pages. These
+  feeds can be subscribed to, to get an update when a page is changed.
+
+  (Support for proper blogs is also planned.)
+
 * support for other file types
 
   ikiwiki also supports files of any other type, including raw html, text,
