hold onto your hats, full-fledged blogging has arrived in ikiwiki!

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -36,3 +36,12 @@ Bulleted list
 [[WikiLink]]
 
 [[SandBox/SubPage]] -- a page under this one.
+
+----
+
+This sandbox is also a [[blog]]! Any subpage of this page is automatically
+added to the blog below.
+
+----
+
+[[inline pages="sandbox/*" show="5"]]
