--- a/basewiki/helponformatting.mdwn
+++ b/basewiki/helponformatting.mdwn
@@ -51,4 +51,9 @@ To link to any other web page, or to an email address, you can just put the url 
 
 ----
 
+Advanced users can use [[PostProcessorDirective]]s to do additional cool
+stuff.
+
+----
+
 This style of text formatting is called [[MarkDown]].
