--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -27,13 +27,6 @@ Currently implemented:
   and is quite smart about converting it to html. The only additional markup
   provided by ikiwiki aside from regular markdown is the [[WikiLink]].
 
-* [[RSS]]
-
-  ikiwiki supports generating RSS (2.0) feed for individual pages. These
-  feeds can be subscribed to, to get an update when a page is changed.
-
-  (Support for proper blogs is also planned.)
-
 * support for other file types
 
   ikiwiki also supports files of any other type, including raw html, text,
@@ -45,9 +38,21 @@ Currently implemented:
 
   Arbitrarily deep hierarchies of pages with fairly simple and useful [[SubPage/LinkingRUles]]
 
+* [[blog]]s
+
+  You can turn any page in the wiki into a [[blog]]. Pages with names 
+  matching a specified [[GlobList]] will be displayed as a weblog within
+  the blog page. And an RSS feed can be generated to follow the blog.
+
+  ikiwiki also supports generating RSS feed for individual pages that
+  do not contain a [[blog]]. These feeds can be used to be sent a new
+  version of a page when it is changed.
+
 * Fast compiler
 
-  ikiwiki is fast and smart about updating a wiki, it only builds pages that have changed (and tracks things like creation of new pages and links that can indirectly cause a page to need a rebuild)
+  ikiwiki is fast and smart about updating a wiki, it only builds pages
+  that have changed (and tracks things like creation of new pages and links
+  that can indirectly cause a page to need a rebuild)
 
 * [[Templates]]
 
