--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -61,38 +61,15 @@ that linked back to it could be added to the page. However, doing linkbacks
 also needs to tie into the main logic, to determine what pages need to be
 renered, so maybe that won't be a plugin.
 
-## blogging and rss
+## blogging
 
-The wiki should emit rss feeds for pages. The simple case is a regular
-page (done). The complex case is a blog composed of multiple pages.
-
-### multi-page blog
-
-This also takes care of the feature of wanting to make a wiki page
-comprised of several sub-pages that can be independantly edited. Add a
-token that can be embedded into a page and that specifies a [[GlobList]] of
-pages. Now when any page matching the globs changes, this page must be
-updated too. 
-
-For the html rendering, just embed the most recently created N pages in the
-[[GlobList]], with the title of each being a link to the individual page,
-plus a link to an additional page that lists all the titles of every
-matching page in creation order (archives). Plus at the bottom a small web
-form that prompts for a title and allows creating a new page for a new blog
-post.
-
-For the rss rendering, generate a proper weblog of the same pages.
-Of course for permalinks use the links to the subpages.
-
-Note that this allows for weblogs with different sections, etc.
-
-Requirements:
-
-* Need to keep track of the globlists in the index file.
-* Need to pick a good token and note that the token will need to be passed
-  multiple parameters. Possibly something like this:
-
-  	[[inline pages="myblog/*" show="30"]]
+- Add a small form at top and bottom of a blog to allow entering
+  a title for a new item, that goes to a template to create the new page.
+- Add a link to the end of a blog to go to the archives; this would
+  probably best be another cgi script, to avoid needing to generate big
+  static pages for little used archives.
+- Should probably add params to control various rss fields like the blog
+  title, its author email, its copyright info, etc. 
 
 ## revisit case
 
@@ -160,6 +137,11 @@ There are also difficulties related to removing files from the srcdir, and
 exposing ones from the underlaydir. Will need to make sure that the mtime
 for the source file is zeroed when the page is removed, and that it then
 finds the underlay file and treats it as newer.
+
+## wikilinks features
+
+- \[[John|Fred]] is a Wikipedia method for linking to the one page
+  while displaying it as the other, Kyle would like this.
 
 ## Logo
 
