add archive pages and fix some bugs

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -35,11 +35,9 @@ Bulleted list
 
 [[WikiLink]]
 
-[[SandBox/SubPage]] -- a page under this one.
-
 ----
 
-This sandbox is also a [[blog]]! Any subpage of this page is automatically
+This sandbox is also a [[blog]]! Any [[SubPage]] of this page is automatically
 added to the blog below.
 
 ----
