--- a/doc/blog.mdwn
+++ b/doc/blog.mdwn
@@ -1,8 +1,18 @@
 You can turn any page on this wiki into a weblog by inserting a
 [[PostProcessorDirective]]. Like this:
 
-\\[[inline pages="blog/*" show="10"]]
+\\[[inline pages="blog/* !*/Discussion" show="10"]]
 
 Any pages that match the specified [[GlobList]] (in the exaple, any
 [[SubPages]] of "blog") will be part of the blog, and the newest 10
 of them will appear in the page.
+
+If you want your blog to have an archive page listing every post ever made
+to it, you can accomplish that like this:
+
+\\[[inline pages="blog/* !*/Discussion" archive="yes"]]
+
+You can even create an automatically generated list of all the pages on the
+wiki, with the most recently added at the top, like this:
+
+\\[[inline pages="* !*/Discussion" archive="yes"]]
