--- a/doc/templates.mdwn
+++ b/doc/templates.mdwn
@@ -13,6 +13,11 @@ It ships with some basic templates which can be customised:
 * `templates/editpage.tmpl` - Create/edit page.
 * `templates/passwordmail.tmpl` - Not a html template, this is used to
   generate the mail with the user's password in it.
+* `templates/rsspage.tmpl` - Used for generating rss feeds for [[blog]]s.
+* `templates/inlinepage.tmpl - Used for adding a page inline in a blog
+  page.
+* `templates/inlinepagetitle.tmpl - Used for listing a page inline in a blog
+  archive page.
 
 If you like, you can add these to further customise it:
 
