--- a/doc/bugs.mdwn
+++ b/doc/bugs.mdwn
@@ -19,3 +19,5 @@
   page that someone wrote in a web browser annoying (`gqip` is vim user's
   friend here). Is there any way to improve this?
 * The diff links in RecentChanges go to a viewcvs backtrace if the rev in question is when the page was added. Is this a viewcvs bug, or a behavior ikiwiki needs to work around?
+* If a page stops inlining anthing, its rss feed file
+  will linger around and not be deleted.
