--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -44,6 +44,8 @@ Currently implemented:
   matching a specified [[GlobList]] will be displayed as a weblog within
   the blog page. And an RSS feed can be generated to follow the blog.
 
+  Ikiwikit's own [[TODO]] and [[news]] pages are good examples of some of the flexible ways that this can be used.
+
 * Fast compiler
 
   ikiwiki is fast and smart about updating a wiki, it only builds pages
