--- a/doc/news.mdwn
+++ b/doc/news.mdwn
@@ -1,4 +1,4 @@
-This is where annoucements of new releases, features, and other news is posted. [[IkiWikiUser]] are recommended to subscribe to this page's RSS feed.
+This is where annoucements of new releases, features, and other news is posted. [[IkiWikiUsers]] are recommended to subscribe to this page's RSS feed.
 
 ----
 
