--- a/doc/news/blogs.mdwn
+++ b/doc/news/blogs.mdwn
@@ -1,5 +1,5 @@
 After too many hours last night spent designing it and a few hours coding,
-ikiwiki now support [[blogs]]!
+ikiwiki now support [[blog]]s!
 
 Note that as part of this, the index file format changed. If you have an
 ikiwiki installation dating from before this post, you should make sure to
