--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -5,6 +5,8 @@ into html pages suitable for publishing on a website. Unlike a traditional
 wiki, ikiwiki does not have its own means of storing page history or its own
 markup language. Instead it uses [[Subversion]] and [[MarkDown]].
 
+* [[News]] is a blog (built using ikiwiki) of new items about ikiwiki.
+
 * See [[Features]] for a current list of ikiwiki's features. [[TODO]] and [[bugs]] might also be of interest.
 
 * [[Setup]] has a tutorial for setting up ikiwki, and [[Usage]] documents the parameters and usage of the ikiwiki program.
