--- a/doc/setup.mdwn
+++ b/doc/setup.mdwn
@@ -8,6 +8,7 @@ optional support for commits from the web.
 
    Ikiwiki requires [[MarkDown]] be installed, and also uses the following
    perl modules: `CGI::Session` `CGI::FormBuilder` `HTML::Template`
+   `Mail::SendMail` `Time::Duration`
 
 2. Create the subversion repository for your wiki.
 
