web commit by joey

--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -5,7 +5,7 @@ into html pages suitable for publishing on a website. Unlike a traditional
 wiki, ikiwiki does not have its own means of storing page history or its own
 markup language. Instead it uses [[Subversion]] and [[MarkDown]].
 
-* [[News]] is a blog (built using ikiwiki) of news items about ikiwiki.
+* [[News]] is a blog (built using ikiwiki) of news items about ikiwiki. [[Download]] ikiwiki today.
 
 * See [[Features]] for a current list of ikiwiki's features. [[TODO]] and [[bugs]] might also be of interest.
 
