--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -5,8 +5,7 @@ into html pages suitable for publishing on a website. Unlike a traditional
 wiki, ikiwiki does not have its own means of storing page history or its own
 markup language. Instead it uses [[Subversion]] and [[MarkDown]].
 
-* [[News]] is a blog (built using ikiwiki) of news items about ikiwiki.
-  Yes, it's free software, yes you can [[Download]] it.
+* [[News]] is a blog (built using ikiwiki) of news items about ikiwiki. It's the best way to find out when there's a new version to [[Download]].
 
 * See [[Features]] for a current list of ikiwiki's features. [[TODO]] and [[bugs]] might also be of interest.
 
