web commit by joey

--- a/doc/todo/blogging.mdwn
+++ b/doc/todo/blogging.mdwn
@@ -2,4 +2,5 @@
   a title for a new item, that goes to a template to create the new page.
 - Should probably add params to control various rss fields like the blog
   title, its author email, its copyright info, etc. 
-
+- The [[TODO]] page would work better if the first N were shown in full, 
+  and then all open items were shown in summary. Maybe add this mode.
