--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -40,6 +40,4 @@ Bulleted list
 This sandbox is also a [[blog]]! Any [[SubPage]] of this page is automatically
 added to the blog below.
 
-----
-
-[[inline pages="sandbox/*" show="5"]]
+[[inline pages="sandbox/*" rootpage="sandbox" show="5"]]
