web commit by joey

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -37,7 +37,6 @@ Bulleted list
 
 ----
 
-This sandbox is also a [[blog]]! Any [[SubPage]] of this page is automatically
-added to the blog below.
+This sandbox is also a [[blog]]!
 
 [[inline pages="sandbox/*" rootpage="sandbox" show="5"]]
