web commit by joey

--- a/doc/blog.mdwn
+++ b/doc/blog.mdwn
@@ -3,8 +3,8 @@ You can turn any page on this wiki into a weblog by inserting a
 
 \\[[inline pages="blog/* !*/Discussion" show="10" rootpage="blog"]]
 
-Any pages that match the specified [[GlobList]] (in the exaple, any
-[[SubPages]] of "blog") will be part of the blog, and the newest 10
+Any pages that match the specified [[GlobList]] (in the example, any
+[[SubPage]] of "blog") will be part of the blog, and the newest 10
 of them will appear in the page.
 
 The optional `rootpage` setting tells the wiki that new posts to this blog
