web commit by joey

--- a/doc/blog.mdwn
+++ b/doc/blog.mdwn
@@ -8,7 +8,7 @@ Any pages that match the specified [[GlobList]] (in the example, any
 of them will appear in the page.
 
 The optional `rootpage` setting tells the wiki that new posts to this blog
-should default to being [[SubPages]] of "blog", and enables a form at the
+should default to being [[SubPage]] of "blog", and enables a form at the
 top of the blog that can be used to add new items.
 
 If you want your blog to have an archive page listing every post ever made
