web commit by joey

--- a/doc/news.mdwn
+++ b/doc/news.mdwn
@@ -2,4 +2,4 @@ This is where annoucements of new releases, features, and other news is posted. 
 
 ----
 
-[[inline pages="news/* !*/Discussion" show="30"]]
+[[inline pages="news/* !*/Discussion" rootpage="news" show="30"]]
