web commit by joey

--- a/doc/todo/blogging.mdwn
+++ b/doc/todo/blogging.mdwn
@@ -2,3 +2,4 @@
   title, its author email, its copyright info, etc. 
 - The [[TODO]] page would work better if the first N were shown in full, 
   and then all open items were shown in summary. Maybe add this mode.
+- Add Discussion and Edit links at the bottom of each inlined post.
