web commit by joey

--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -3,7 +3,7 @@ Welcome to ikiwiki's todo blog. Feel free to add todo items on
 
 ## recently added
 
-[[inline pages="todo/* !todo/done* !*/Discussion" show="30"]]
+[[inline pages="todo/* !todo/done* !*/Discussion" rootpage="todo" show="30"]]
 
 ## all open todo items
 
