web commit by joey

--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -1,10 +1,10 @@
 Welcome to ikiwiki's todo blog. Feel free to add todo items on
 [[SubPage]]s, and move items to [[todo/done]] when they're done.
 
-## recently added
-
 [[inline pages="todo/* !todo/done* !*/Discussion" rootpage="todo" show="30"]]
 
-## all open todo items
+----
+
+Here are open todo items:
 
 [[inline pages="todo/* !todo/done* !*/Discussion" archive="yes"]]
