web commit by joey

--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -98,7 +98,7 @@ Currently implemented:
 
 * page locking
 
-  Wiki admin can [[lock]] pages so that only other admins can edit them.
+  Wiki admins can lock pages so that only other admins can edit them.
 
 ----
 
