web commit by joey

--- a/doc/whyikiwiki.mdwn
+++ b/doc/whyikiwiki.mdwn
@@ -4,3 +4,5 @@ because "ikiwiki" is a nice palindrome. Partly because its design turns
 the usual design for a Wiki inside-out and backwards.
 
 Oh, maybe you wanted to know why you'd want to choose ikiwiki instead of all the other wikis out there? Unless your personal strangeness significantly aligns with [[Joey]]'s, so that keeping everything in subversion, compiling websites to static html, and like design [[features]] appeal to you, you probably won't.
+
+Hmm, the above paragraph is less true today than it was when I wrote it.
