web commit by joey

--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -15,4 +15,4 @@ markup language. Instead it uses [[Subversion]] and [[MarkDown]].
 
 All wikis are supposed to have a [[SandBox]], so this one does too.
 
-ikiwiki is developed by [[Joey]].
+ikiwiki is developed by [[Joey]] and is [[FreeSoftware]].
