--- a/doc/todo/blogging.mdwn
+++ b/doc/todo/blogging.mdwn
@@ -6,4 +6,6 @@
 - Still not completly comfortable with ikiwiki only knowing when a page was
   posted based on the on-disk mtime the first time it sees the page. svn doesn't
   preserve mtimes and also if the index gets broken it will see new mtimes for any
-  pages that were actually modified in the interim.
+  pages that were actually modified in the interim. I suppose that info could 
+  be pulled out of svn log by a utility that was run if the index or mtimes 
+  got screwed up.
