web commit by PerOlofsson: typo

--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -36,7 +36,7 @@ Currently implemented:
 
 * [[SubPage]]s
 
-  Arbitrarily deep hierarchies of pages with fairly simple and useful [[SubPage/LinkingRUles]]
+  Arbitrarily deep hierarchies of pages with fairly simple and useful [[SubPage/LinkingRules]]
 
 * [[blog]]s
 
