--- a/doc/todo/blogging.mdwn
+++ b/doc/todo/blogging.mdwn
@@ -9,3 +9,4 @@
   pages that were actually modified in the interim. I suppose that info could 
   be pulled out of svn log by a utility that was run if the index or mtimes 
   got screwed up.
+- It would be possible to support rss enclosures for eg, podcasts, pretty easily. 
