web commit by joey

--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -1,5 +1,4 @@
-Welcome to ikiwiki's todo blog. Feel free to add todo items on
-[[SubPage]]s, and move items to [[todo/done]] when they're done.
+Welcome to ikiwiki's todo list. Items are moved to [[todo/done]] when done.
 
 [[inline pages="todo/* !todo/done* !*/Discussion" rootpage="todo" show="30"]]
 
