web commit by joey

--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -4,6 +4,6 @@ Welcome to ikiwiki's todo list. Items are moved to [[todo/done]] when done.
 
 ----
 
-Here are all the open todo items:
+# Full list of open items:
 
 [[inline pages="todo/* !todo/done* !*/Discussion" archive="yes"]]
