--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -2,5 +2,5 @@ This page is to track users of ikiwiki.
 
 * [This wiki](http://ikiwiki.kitenet.net) (of course!)
 * [[Joey]]'s [codewiki](http://kitenet.net/~joey/codewiki)
-* Jeroen Schot's [homepage](http://schot.a-eskwadraat.nl) (Weblog uses [Blosxom](http://www.blosxom.com) but will soon migrate too).
+* Jeroen Schot's [homepage/weblog](http://schot.a-eskwadraat.nl)
 * Kyle's [MacLea Geneology wiki](http://kitenet.net/~kyle/family/wiki)
