web commit by JeroenSchot: typo.

--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -88,7 +88,7 @@ Currently implemented:
   Since it uses subversion, ikiwiki takes advantage of its smart merging to
   avoid any conflicts when two people edit different parts of the same page
   at the same time. No annoying warnings about other editors, or locking,
-  etc, instead the other person's changes will be automaticaly merged with
+  etc, instead the other person's changes will be automatically merged with
   yours when you commit.
 
   In the rare cases where automatic merging fails due to the same part of a
