--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -1,4 +1,5 @@
-[[logo/ikiwiki.png]] Welcome to the ikiwiki documentation wiki.
+[[logo/ikiwiki.png]]  
+Welcome to the ikiwiki documentation wiki.
 
 ikiwiki is a wiki compiler. It converts a directory full of wiki pages
 into html pages suitable for publishing on a website. Unlike a traditional
