web commit by joey

--- a/doc/logo.mdwn
+++ b/doc/logo.mdwn
@@ -6,4 +6,5 @@ Anyway, if you have this logo in other fonts or colors, feel free to send
 it to [[Joey]] for inclusion here. (Or upload it, once that feature is
 added).
 
-* [[ikiwiki.png]] -- Contributed by [[JeroenSchot]]
+* [[ikiwiki.png]] 
+  Contributed by [[JeroenSchot]]
