--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -1,6 +1,6 @@
 This page is to track users of ikiwiki.
 
 * [This wiki](http://ikiwiki.kitenet.net) (of course!)
-* [[Joey]]'s [codewiki](http://kitenet.net/~joey/codewiki)
+* [[Joey]]'s [homepage](http://kitenet.net/~joey/), including his weblog
 * Jeroen Schot's [homepage/weblog](http://schot.a-eskwadraat.nl)
 * Kyle's [MacLea Geneology wiki](http://kitenet.net/~kyle/family/wiki)
