--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -8,7 +8,7 @@ markup language. Instead it uses [[Subversion]] and [[MarkDown]].
 
 * See [[Features]] for a current list of ikiwiki's features. [[TODO]] and [[bugs]] might also be of interest.
 
-* [[Setup]] has a tutorial for setting up ikiwki, and [[Usage]] documents the parameters and usage of the ikiwiki program.
+* [[Setup]] has a tutorial for setting up ikiwki, and [[Usage]] documents the parameters and usage of the ikiwiki program. If you use ikiwiki, please add your wiki to [[IkiWikiUsers]].
 
 * [[Security]] lists potential security problems. ikiwiki is still being developed, and is being written with security as a priority, so don't expect things to stay in this list for long.
 
