--- a/doc/markdown.mdwn
+++ b/doc/markdown.mdwn
@@ -2,7 +2,7 @@
 is a minimal markup language that resembles plain text as used in
 email messages. It is the markup language used by this wiki.
 
-For documentation about the markdown syntax, see
+For documentation about the markdown syntax, see [[HelpOnEditing]] and
 [Markdown: syntax](http://daringfireball.net/projects/markdown/syntax).
 
 Note that [[WikiLink]]s are not part of the markdown syntax, and are the
