web commit by joey

--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -1,5 +1,5 @@
 [[logo/ikiwiki.png]]  
-ikiwiki is a wiki compiler. It converts a directory full of wiki pages
+ikiwiki is a **wiki compiler**. It converts a directory full of wiki pages
 into html pages suitable for publishing on a website. Unlike a traditional
 wiki, ikiwiki does not have its own means of storing page history or its own
 markup language. Instead it uses [[Subversion]] and [[MarkDown]].
