--- a/doc/todo/html.mdwn
+++ b/doc/todo/html.mdwn
@@ -4,3 +4,10 @@ formatting, and images to indicate web vs svn commits and to link to diffs.
 All of this should be doable w/o touching a single line of code, just
 editing the [[templates]] BTW.
 
+Current problems:
+
+  * A doctype should be added: do we want XHTML 1.0 or HTML 4.01 Trans as default?
+  * If XHTML: In templates &lt;hr&gt; should become &lt;hr\&gt; etc.
+  * Image wikilinks should provide an alt text (maybe '$filname wiki-image'?).
+  * &'s in (cgi-)url's must be escaped as &amp;amp;.
+  * [ [inlinepage] ] gets wrapped in &lt;p&gt;...&lt;/p&gt; which has a high chance of invalidating the page.
