--- a/doc/wikilink.mdwn
+++ b/doc/wikilink.mdwn
@@ -23,3 +23,7 @@ charaters, it is possible to create page names containing other characters:
 
 Note that if the file linked to by a WikiLink looks like an image, it will
 be displayed inline on the page.
+
+It's also possible to write a WikiLink that uses something other than the
+page name as the link text. For example "\[[foo|SandBox]]" links to the
+SandBox page, but the link will appear like this: [[foo|SandBox]]
