--- a/doc/news.mdwn
+++ b/doc/news.mdwn
@@ -1,3 +1,7 @@
 This is where annoucements of new releases, features, and other news is posted. [[IkiWikiUsers]] are recommended to subscribe to this page's RSS feed.
 
 [[inline pages="news/* !*/Discussion" rootpage="news" show="30"]]
+
+----
+
+By the way, some other pages with RSS feeds about ikiwiki include [[TODO]] and [[TODO/done]].
