--- a/doc/todo/terminalclient.mdwn
+++ b/doc/todo/terminalclient.mdwn
@@ -3,4 +3,4 @@ and $EDITOR. Browse around a wiki, select pages to edit and get dropped
 right into the editor and have the page committed to svn automatically.
 
 Less grandiosely, a simple command line util to add a new page would be
-useful, especially if it made it easy to add blog entries to the wiki.
+useful, especially if it made it easy to add blog entries to the wiki. I have a special purpose version of this in my [blog script](http://kitenet.net/~joey/code/bin.html).
