--- a/doc/todo/html.mdwn
+++ b/doc/todo/html.mdwn
@@ -6,8 +6,35 @@ editing the [[templates]] BTW.
 
 Current problems:
 
-  * A doctype should be added: do we want XHTML 1.0 or HTML 4.01 Trans as default?
-  * If XHTML: In templates &lt;hr&gt; should become &lt;hr\&gt; etc.
+  * A doctype should be added: do we want XHTML 1.0 or HTML 4.01 Trans as
+    default?
+    
+	Need to choose a doctype that corresponds to what [[MarkDown]]
+	generates. For example, it does generate &lt;hr /&gt;
+	So xhml seems a good fit and I'm going to add that to the
+	templates. 
+	
+	One consideration of course is that regular users might embed html
+	that uses deprecated presentational elements like &lt;center&gt;.
+	--[[Joey]]
+	
+  * If XHTML: In templates &lt;hr&gt; should become &lt;hr /&gt; etc.
   * Image wikilinks should provide an alt text (maybe '$filname wiki-image'?).
+
+  	Now it will be the text of the [[WikiLink]], which even allows
+	setting a custom alt text like this: \[[my_alt_text|image.png]]
+	--[[Joey]]
+	
   * &'s in (cgi-)url's must be escaped as &amp;amp;.
+  
+  	Fixed --[[Joey]]
+	
   * [ [inlinepage] ] gets wrapped in &lt;p&gt;...&lt;/p&gt; which has a high chance of invalidating the page.
+
+  	Since markdown does this, the only way I can think to fix it is to
+	make the inlined page text start with &lt;/p&gt; and end with
+	&lt;p&gt;. Ugly, and of course there could be problems with
+	markdown enclosing it in other spanning tags in some cases.
+	I've implemented this hack now. :-/ --[[Joey]]
+
+Test: [validate this page](http://validator.w3.org/check?url=referer)
