web commit by joey

--- a/doc/todo/html.mdwn
+++ b/doc/todo/html.mdwn
@@ -41,4 +41,6 @@ editing the [[templates]] BTW.
 	markdown enclosing it in other spanning tags in some cases.
 	I've implemented this hack now. :-/ --[[Joey]]
 
+  * This page is now valid, although the validator conplains at having to guess the encoding. Should the encoding be forced to utf-8 in the templates?
+
 Test: [validate this page](http://validator.w3.org/check?url=referer)
