web commit by joey

--- a/doc/logo.mdwn
+++ b/doc/logo.mdwn
@@ -6,6 +6,6 @@ Anyway, if you have this logo in other fonts or colors, feel free to send
 it to [[Joey]] for inclusion here. (Or upload it, once that feature is
 added).
 
-[[ikiwiki.png]] 
+[[ikiwiki_logo|ikiwiki.png]] 
 
 Contributed by [[JeroenSchot]]
