web commit by joey

--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -1,4 +1,4 @@
-[[logo/ikiwiki.png]]  
+[[ikiwiki_logo|logo/ikiwiki.png]]  
 ikiwiki is a **wiki compiler**. It converts a directory full of wiki pages
 into html pages suitable for publishing on a website. Unlike a traditional
 wiki, ikiwiki does not have its own means of storing page history or its own
