--- a/basewiki/markdown.mdwn
+++ b/basewiki/markdown.mdwn
@@ -2,8 +2,7 @@
 is a minimal markup language that resembles plain text as used in
 email messages. It is the markup language used by this wiki.
 
-For documentation about the markdown syntax, see
+For documentation about the markdown syntax, see [[HelpOnFormatting]] and
 [Markdown: syntax](http://daringfireball.net/projects/markdown/syntax).
 
-Note that [[WikiLink]]s are not part of the markdown syntax, and are the
-only bit of markup that this wiki handles internally.
+Note that [[WikiLink]]s and [[PostProcessorDirective]]s are not part of the markdown syntax, and are the only bit of markup that this wiki handles internally.
